--- a/jordans.html
+++ b/jordans.html
@@ -21,7 +21,7 @@
     </div>
     <div id="selectcontainer">
         <img src="air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png" alt="item1" class="items" id="item1" onclick="changing('#0062be'); changing('air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png');">
-        <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,b_rgb:f5f5f5,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/ea3a034a-351d-4d5e-9e39-6ebe24eebd23/air-jordan-1-mid-shoes-SQf7DM.png" alt="item2" class="items" id="item2" onclick="changing('#10bc39f9'); changing('https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,b_rgb:f5f5f5,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/31ff59e2-89d0-4a83-839a-656618674782/air-jordan-1-mid-shoes-SQf7DM.png');">
+        <img src="air-jordan-1-mid-shoes-SQf7DM (2)_adobe_express.png" alt="item2" class="items" id="item2" onclick="changing('#10bc39f9'); changing('air-jordan-1-mid-shoes-SQf7DM (2)_adobe_express.png');">
         <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,b_rgb:f5f5f5,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/31ff59e2-89d0-4a83-839a-656618674782/air-jordan-1-mid-shoes-SQf7DM.png" alt="item3" class="items" id="item3" onclick="changing('#e60c2c'); changing('https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,b_rgb:f5f5f5,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/ea3a034a-351d-4d5e-9e39-6ebe24eebd23/air-jordan-1-mid-shoes-SQf7DM.png');">
     </div>
     <script src="jordans-js.js"></script>
