--- a/jordans.html
+++ b/jordans.html
@@ -7,7 +7,7 @@
 </head>
 <body id="body">
     <nav id="navigation">
-        <img src="content://com.android.providers.downloads.documents/document/msf%3A1000065723" alt="logo" id="logo">
+        <img src="michael-jordan-air-jordan-jumpman-basketball-logo-19_adobe_express.png" alt="logo" id="logo">
         <h1 id="heading">Jordan's</h1>
         <div id="menu">
             <ul>
