--- a/jordans.html
+++ b/jordans.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nike-Jordans1</title>
+    <title>Nike-Jordans-Air</title>
     <link rel="stylesheet" href="jordans-css.css">    
 </head>
 <body id="body">
