--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
     </nav>
     <div id="maincontainer">
-        <img src="air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png" alt="mainimage" id="mainimg">
+        <img loading="auto" src="air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png" alt="mainimage" id="mainimg">
     </div>
     <div id="selectcontainer">
-        <img src="air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png" alt="item1" class="items" id="item1" onclick="changing('#0062be'); changing('air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png');">
-        <img src="air-jordan-1-mid-shoes-SQf7DM (2)_adobe_express.png" alt="item2" class="items" id="item2" onclick="changing('#10bc39f9'); changing('air-jordan-1-mid-shoes-SQf7DM (2)_adobe_express.png');">
-        <img src="air-jordan-1-mid-shoes-SQf7DM (3)_adobe_express.png" alt="item3" class="items" id="item3" onclick="changing('#e60c2c'); changing('air-jordan-1-mid-shoes-SQf7DM (3)_adobe_express.png');">
+        <img loading="auto" src="air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png" alt="item1" class="items" id="item1" onclick="changing('#0062be'); changing('air-jordan-1-mid-shoes-SQf7DM (1)_adobe_express.png');">
+        <img loading="auto" src="air-jordan-1-mid-shoes-SQf7DM (2)_adobe_express.png" alt="item2" class="items" id="item2" onclick="changing('#10bc39f9'); changing('air-jordan-1-mid-shoes-SQf7DM (2)_adobe_express.png');">
+        <img loading="auto" src="air-jordan-1-mid-shoes-SQf7DM (3)_adobe_express.png" alt="item3" class="items" id="item3" onclick="changing('#e60c2c'); changing('air-jordan-1-mid-shoes-SQf7DM (3)_adobe_express.png');">
     </div>
     <script src="jordans-js.js"></script>
 </body>
